@@ -1,3 +1,7 @@
+2007-11-25 Jim Garlick <garlick.jim@gmail.com>
+
+	* src/gpib.c : Implement srq thread and abort hook.
+
 2007-11-23 Jim Garlick <garlick.jim@gmail.com>
 
 	* src/vxi11srq.x : Rename to vxi11intr.x.
